# python-smarttub

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml
smarttub/: __init__.py  __main__.py  api.py
tests/: conftest.py  test_account.py  test_api.py  test_light.py  test_pump.py  test_reminder.py  test_smarttub.py  test_spa.py
tests/integration/: test_real_api.py
