[project]
name = "python-smarttub"
dynamic = ["version"]
description = "API to query and control hot tubs using the SmartTub system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.1",
    "inflection~=0.5.1",
    "pyjwt>=2.10.0",
    "python-dateutil~=2.8.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "aresponses",
    "pre-commit",
    "black",
    "flake8",
    "twine"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["smarttub"]
